--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,3 +9,6 @@
 --------------------------------------
 
 <app-mission-control></app-mission-control>
+<br />
+<div>Tow-way binding</div>
+<app-tow-way-binding></app-tow-way-binding>
